@@ -1435,16 +1435,13 @@ proc load_base_board_description { board_name } {
 #
 
 proc runtest { test_file_name } {
-    global prms_id
-    global bug_id
     global test_result
     global errcnt
     global errorInfo
     global tool
 
     clone_output "Running $test_file_name ..."
-    set prms_id	0
-    set bug_id	0
+    reset_vars
     set test_result ""
 
     if {[file exists $test_file_name]} {
