@@ -1,3 +1,8 @@
+2011-03-14  Jan Kratochvil  <jan.kratochvil@redhat.com>
+
+	* runtest.exp (runtest): Call reset_vars at initialisation so that
+	a perror does not affect test results in other test scripts.
+
 2011-03-09  Ben Elliston  <bje@gnu.org>
 
 	* NEWS: Start a new section for post-1.5 changes.
